# DreamF1

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
.playwright-mcp/: page-2026-04-27T17-41-56-868Z.yml
backend/: .dockerignore  Dockerfile  experiment.py  main.py  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  database.py  models.py
backend/cache/: fastf1_http_cache.sqlite
backend/tests/: conftest.py  test_health.py
deploy/: docker-compose.yml
frontend/: .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  vercel.json
frontend-prototype/: Dockerfile  main.py  prefetch.py  pyproject.toml
frontend-prototype/data/: 2026_1_gaps.json  2026_1_laptimes.json  2026_1_positions.json  2026_1_quali.json  2026_1_race_summary.json  2026_1_sector_times.json  2026_1_speed.json  2026_1_tyres.json  2026_2_gaps.json  2026_2_laptimes.json  2026_2_positions.json  2026_2_quali.json  2026_2_race_summary.json  2026_2_sector_times.json  2026_2_speed.json  2026_2_tyres.json  2026_3_gaps.json  2026_3_laptimes.json  2026_3_positions.json  2026_3_quali.json  2026_3_race_summary.json  2026_3_sector_times.json  2026_3_speed.json  2026_3_tyres.json  schedule.json
frontend/app/: globals.css  layout.tsx
frontend/app/circles/: CirclesClient.tsx  page.tsx
frontend/app/dashboard/: CirclesOverview.tsx  NextRaceCard.tsx  page.tsx  (+1 more)
frontend/components/: Footer.tsx  NavHeader.tsx
frontend/lib/: design.ts
frontend/src/: App.tsx
(+17 files in other folders)
