[project]
name = "myf1circle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "fastf1>=3.8.1",
    "psycopg2-binary>=2.9.11",
    "sqlmodel>=0.0.37",
    "streamlit>=1.55.0",
    "uvicorn>=0.41.0",
]
