[project]
name = "frontend-prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.6",
    "numpy>=2.4.3",
    "plotly>=6.6.0",
    "requests>=2.33.0",
    "streamlit>=1.55.0",
]
